classpath解析测试完成